--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "classnames": "^2.2.6",
     "document-register-element": "1.13.1",
     "express": "4.17.1",
+    "firebase-admin": "^9.1.1",
+    "firebase-functions": "^3.11.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
@@ -66,6 +68,7 @@
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-react": "7.20.0",
     "eslint-plugin-react-hooks": "4.0.4",
+    "firebase-functions-test": "^0.2.1",
     "jest": "25.2.3",
     "prettier": "2.0.4",
     "ts-jest": "25.2.1",
