added up config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,21 @@
 language: node_js
 node_js:
   - 10
+
+git:
+  depth: false
+
+branches:
+  only:
+    - master
+
+install:
+  - curl -sf https://up.apex.sh/install | sudo sh
+     
+deploy:
+  provider: script
+  script:
+    yarn;
+    up deploy;
+    on:
+      all_branches: true
