--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,10 @@
     "baseUrl": ".",
     "paths": {
       "@demo-monorepo/api-interfaces": ["libs/api-interfaces/src/index.ts"],
-      "@demo-monorepo/ui": ["libs/ui/src/index.ts"]
+      "@demo-monorepo/ui": ["libs/ui/src/index.ts"],
+      "@demo-monorepo/service-people": ["libs/service-people/src/index.ts"],
+      "@demo-monorepo/service-photo": ["libs/service-photo/src/index.ts"],
+      "@demo-monorepo/service-folder": ["libs/service-folder/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
