--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "private": true,
   "dependencies": {
     "@nivo/calendar": "^0.62.0",
+    "@nivo/geo": "^0.62.0",
     "axios": "^0.19.2",
     "bulma": "^0.9.0",
     "classnames": "^2.2.6",
@@ -39,6 +40,7 @@
     "firebase-functions": "^3.11.0",
     "ramda": "^0.27.1",
     "react": "16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "16.13.1",
     "react-router-dom": "5.2.0",
     "react-spring": "^8.0.27",
