--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,7 +21,8 @@
       "@demo-monorepo/service-people": ["libs/service-people/src/index.ts"],
       "@demo-monorepo/service-photo": ["libs/service-photo/src/index.ts"],
       "@demo-monorepo/service-folder": ["libs/service-folder/src/index.ts"],
-      "@demo-monorepo/service-corana": ["libs/service-corana/src/index.ts"]
+      "@demo-monorepo/service-corana": ["libs/service-corana/src/index.ts"],
+      "@demo-monorepo/hooks": ["libs/hooks/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
