--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "16.13.1",
+    "react-hook-form": "^6.5.1",
     "react-router-dom": "5.2.0",
     "react-spring": "^8.0.27",
     "react-use-gesture": "^7.0.15"
