moved carousel to resusable lib

--- a/nx.json
+++ b/nx.json
@@ -17,12 +17,7 @@
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
       "options": {
-        "cacheableOperations": [
-          "build",
-          "lint",
-          "test",
-          "e2e"
-        ]
+        "cacheableOperations": ["build", "lint", "test", "e2e"]
       }
     }
   },
@@ -32,9 +27,7 @@
     },
     "sarccom-demo-app-e2e": {
       "tags": [],
-      "implicitDependencies": [
-        "sarccom-demo-app"
-      ]
+      "implicitDependencies": ["sarccom-demo-app"]
     },
     "api": {
       "tags": []
@@ -50,18 +43,14 @@
     },
     "sarccom-demo-admin-e2e": {
       "tags": [],
-      "implicitDependencies": [
-        "sarccom-demo-admin"
-      ]
+      "implicitDependencies": ["sarccom-demo-admin"]
     },
     "dashboard-app": {
       "tags": []
     },
     "dashboard-app-e2e": {
       "tags": [],
-      "implicitDependencies": [
-        "dashboard-app"
-      ]
+      "implicitDependencies": ["dashboard-app"]
     },
     "service-people": {
       "tags": []
@@ -83,9 +72,10 @@
     },
     "livingpackets-carousel-e2e": {
       "tags": [],
-      "implicitDependencies": [
-        "livingpackets-carousel"
-      ]
+      "implicitDependencies": ["livingpackets-carousel"]
+    },
+    "carousel": {
+      "tags": []
     }
   }
 }
