--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "4.17.1",
     "firebase-admin": "^9.1.1",
     "firebase-functions": "^3.11.0",
+    "lowdb": "^1.0.0",
     "ramda": "^0.27.1",
     "react": "16.13.1",
     "react-beautiful-dnd": "^13.0.0",
