added channel listing page page

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,7 +23,8 @@
       "@demo-monorepo/service-folder": ["libs/service-folder/src/index.ts"],
       "@demo-monorepo/service-corana": ["libs/service-corana/src/index.ts"],
       "@demo-monorepo/hooks": ["libs/hooks/src/index.ts"],
-      "@demo-monorepo/carousel": ["libs/carousel/src/index.ts"]
+      "@demo-monorepo/carousel": ["libs/carousel/src/index.ts"],
+      "@demo-monorepo/service-channel": ["libs/service-channel/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
