--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^0.19.2",
     "bulma": "^0.9.0",
     "classnames": "^2.2.6",
+    "date-fns": "^2.16.1",
     "document-register-element": "1.13.1",
     "express": "4.17.1",
     "firebase-admin": "^9.1.1",
