--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "dep-graph": "nx dep-graph",
     "help": "nx help",
     "sarccom": "concurrently \"yarn nx serve sarccom-demo-app\" \"yarn nx serve sarccom-demo-admin --port=4201\" \"yarn nx serve api\"",
-    "dashboard": "concurrently \"yarn nx serve dashboard-app\" \"yarn nx serve api\""
+    "dashboard": "concurrently \"yarn nx serve dashboard-app\" \"yarn nx serve api\"",
+    "deploy": "serverless deploy -p dist/apps/api-tv-channels"
   },
   "private": true,
   "dependencies": {
     "@nivo/calendar": "^0.62.0",
     "@nivo/geo": "^0.62.0",
+    "aws-serverless-express": "^3.3.8",
     "axios": "^0.19.2",
     "bulma": "^0.9.0",
     "classnames": "^2.2.6",
@@ -86,6 +88,7 @@
     "firebase-functions-test": "^0.2.1",
     "jest": "25.2.3",
     "prettier": "2.0.4",
+    "serverless": "^2.3.0",
     "ts-jest": "25.2.1",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
